--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
+    "tailwindcss": "^3.3.3",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.3"
+    "autoprefixer": "^10.4.14"
   }
 }
